# python-onix

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: build-docs.yml  package.yml
docs/: conf.py  index.rst
src/onix/: __init__.py
src/onix/book/: __init__.py
src/onix/book/v2_1/reference/: __init__.py  book_2_1_reference.py  onix_book_product_code_lists.py  onix_xhtml_subset.py
src/onix/book/v2_1/short/: __init__.py  book_2_1_short.py  onix_book_product_code_lists.py  onix_xhtml_subset.py
src/onix/book/v3_0/: __init__.py
src/onix/book/v3_0/reference/: __init__.py  book_3_0_reference.py  onix_book_product_code_lists.py  onix_xhtml_subset.py
src/onix/book/v3_0/reference/strict/: __init__.py  book_3_0_reference_strict.py
src/onix/book/v3_0/short/: __init__.py  book_3_0_short.py  onix_book_product_3_0_short.py  onix_book_product_code_lists.py
src/onix/book/v3_0/short/strict/: __init__.py  book_3_0_short_strict.py  onix_xhtml_subset.py
src/onix/book/v3_1/reference/: __init__.py  onix_book_product_3_1_reference.py  onix_book_product_code_lists.py  onix_xhtml_subset.py
src/onix/book/v3_1/reference/strict/: __init__.py  onix_book_product_3_1_reference_strict.py  onix_book_product_code_lists.py
src/onix/book/v3_1/short/: __init__.py  onix_book_product_3_1_short.py  onix_book_product_code_lists.py
src/onix/book/v3_1/short/strict/: __init__.py  onix_book_product_3_1_short_strict.py  onix_book_product_code_lists.py  onix_xhtml_subset.py
